--- a/website/index.html
+++ b/website/index.html
@@ -1,15 +1,29 @@
 <html>
    <head>
-      <title>Jingle Jam 2022 Dashboard</title>
+      <title>Jingle Jam Live Dashboard</title>
+      
+      <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico"/>
       
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.9.0/semantic.min.js" integrity="sha512-kcjXjSNAMuKRYv8VAk/rMsHzGC/M/thh4QRZAE3SM2HPAQs77N0aOVh35IpJAtLxFpzfHeYzFHf9upgnNFfQUQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js" integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      <script src="https://cdn.jsdelivr.net/npm/moment@^2"></script>
+      <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@^1"></script>
       <script src="./script.js"></script>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.9.0/semantic.min.css" integrity="sha512-PwhgdrueUt7iVICnZMjYcbiLalCztrVfzUIYXekIK8hZu4DQP141GrKh6fUHmNERWi4bGdBXIZqtBZnsSzHEMg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-      <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.4.0/css/responsive.semanticui.min.css"/>
       <link rel="stylesheet" href="./style.css"/>
 
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+      <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-GB21M3FZV5"></script>
+      <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+
+         gtag('config', 'G-GB21M3FZV5');
+      </script>
    </head>
    <body>
       <header id="header">
@@ -49,7 +63,7 @@
                 $ 0
              </div>
              <div class="label">
-                Total Amount Raised For 2022
+                Current Amount Raised For 2022
              </div>
           </div>
           <div class="statistic poundComponent">
@@ -57,7 +71,7 @@
                £ 0
              </div>
              <div class="label">
-              Total Amount Raised For 2022
+               Current Amount Raised For 2022
              </div>
           </div>
        </div>
@@ -147,17 +161,120 @@
      </div>
       <div id="liveUpdatingRow">
          <label class="subtext-label" id="updatingRealTime">
+            <div class="ui active slow inverted loader mini"></div>
+            <div class="loading-circle">
+                <i class="live-icon icon circle"></i>
+             </div>
            Updating Live
-           <div class="ui active slow inverted loader mini"></div>
          </label>
         <label class="subtext-label" id="labelDate" style="float: right;">
           Last Updated: N/A
         </label>
       </div>
-       <div class="ui divider" style="margin-top: 0px;"></div>
+       <div class="ui divider" style="margin-top: 0px; margin-bottom: 0px;"></div>
+       <div class="ui tiny statistics inverted custom-grid" style="margin-top: 7px !important;">
+         <div class="custom-grid-column-6 statistic dollarComponent">
+            <div class="value color-2016" id="dollars2016">
+               $ 0
+            </div>
+            <div class="label">
+               2016 Total
+            </div>
+         </div>
+         <div class="custom-grid-column-6 statistic dollarComponent">
+            <div class="value color-2017" id="dollars2017">
+               $ 0
+            </div>
+            <div class="label">
+               2017 Total
+            </div>
+         </div>
+         <div class="custom-grid-column-6 statistic dollarComponent">
+            <div class="value color-2018" id="dollars2018">
+               $ 0
+            </div>
+            <div class="label">
+               2018 Total
+            </div>
+         </div>
+         <div class="custom-grid-column-6 statistic dollarComponent">
+            <div class="value color-2019" id="dollars2019">
+               $ 0
+            </div>
+            <div class="label">
+               2019 Total
+            </div>
+         </div>
+         <div class="custom-grid-column-6 statistic dollarComponent">
+            <div class="value color-2020" id="dollars2020">
+               $ 0
+            </div>
+            <div class="label">
+               2020 Total
+            </div>
+         </div>
+         <div class="custom-grid-column-6 statistic dollarComponent">
+            <div class="value color-2021" id="dollars2021">
+               $ 0
+            </div>
+            <div class="label">
+               2021 Total
+            </div>
+         </div>
+
+         <div class="custom-grid-column-6 statistic poundComponent">
+            <div class="value color-2016" id="pounds2016">
+               £ 0
+            </div>
+            <div class="label">
+               2016 Total
+            </div>
+         </div>
+         <div class="custom-grid-column-6 statistic poundComponent">
+            <div class="value color-2017" id="pounds2017">
+               £ 0
+            </div>
+            <div class="label">
+               2017 Total
+            </div>
+         </div>
+         <div class="custom-grid-column-6 statistic poundComponent">
+            <div class="value color-2018" id="pounds2018">
+               £ 0
+            </div>
+            <div class="label">
+               2018 Total
+            </div>
+         </div>
+         <div class="custom-grid-column-6 statistic poundComponent">
+            <div class="value color-2019" id="pounds2019">
+               £ 0
+            </div>
+            <div class="label">
+               2019 Total
+            </div>
+         </div>
+         <div class="custom-grid-column-6 statistic poundComponent">
+            <div class="value color-2020" id="pounds2020">
+               £ 0
+            </div>
+            <div class="label">
+               2020 Total
+            </div>
+         </div>
+         <div class="custom-grid-column-6 statistic poundComponent">
+            <div class="value color-2021" id="pounds2021">
+               £ 0
+            </div>
+            <div class="label">
+               2021 Total
+            </div>
+         </div>
+       </div>
+       <!-- 
        <div class="ui tiny statistics inverted green custom-grid">
          <div class="custom-grid-column-6 statistic dollarComponent">
-            <div class="value" id="dollars2016">
+            <div class="value" id="dollarsCurrent2016">
                $ 0
             </div>
             <div class="label">
@@ -165,7 +282,7 @@
             </div>
          </div>
          <div class="custom-grid-column-6 statistic dollarComponent">
-            <div class="value" id="dollars2017">
+            <div class="value" id="dollarsCurrent2017">
                $ 0
             </div>
             <div class="label">
@@ -173,7 +290,7 @@
             </div>
          </div>
          <div class="custom-grid-column-6 statistic dollarComponent">
-            <div class="value" id="dollars2018">
+            <div class="value" id="dollarsCurrent2018">
                $ 0
             </div>
             <div class="label">
@@ -181,7 +298,7 @@
             </div>
          </div>
          <div class="custom-grid-column-6 statistic dollarComponent">
-            <div class="value" id="dollars2019">
+            <div class="value" id="dollarsCurrent2019">
                $ 0
             </div>
             <div class="label">
@@ -189,7 +306,7 @@
             </div>
          </div>
          <div class="custom-grid-column-6 statistic dollarComponent">
-            <div class="value" id="dollars2020">
+            <div class="value" id="dollarsCurrent2020">
                $ 0
             </div>
             <div class="label">
@@ -197,7 +314,7 @@
             </div>
          </div>
          <div class="custom-grid-column-6 statistic dollarComponent">
-            <div class="value" id="dollars2021">
+            <div class="value" id="dollarsCurrent2021">
                $ 0
             </div>
             <div class="label">
@@ -206,7 +323,7 @@
          </div>
 
          <div class="custom-grid-column-6 statistic poundComponent">
-            <div class="value" id="pounds2016">
+            <div class="value" id="poundsCurrent2016">
                £ 0
             </div>
             <div class="label">
@@ -214,7 +331,7 @@
             </div>
          </div>
          <div class="custom-grid-column-6 statistic poundComponent">
-            <div class="value" id="pounds2017">
+            <div class="value" id="poundsCurrent2017">
                £ 0
             </div>
             <div class="label">
@@ -222,7 +339,7 @@
             </div>
          </div>
          <div class="custom-grid-column-6 statistic poundComponent">
-            <div class="value" id="pounds2018">
+            <div class="value" id="poundsCurrent2018">
                £ 0
             </div>
             <div class="label">
@@ -230,7 +347,7 @@
             </div>
          </div>
          <div class="custom-grid-column-6 statistic poundComponent">
-            <div class="value" id="pounds2019">
+            <div class="value" id="poundsCurrent2019">
                £ 0
             </div>
             <div class="label">
@@ -238,7 +355,7 @@
             </div>
          </div>
          <div class="custom-grid-column-6 statistic poundComponent">
-            <div class="value" id="pounds2020">
+            <div class="value" id="poundsCurrent2020">
                £ 0
             </div>
             <div class="label">
@@ -246,7 +363,7 @@
             </div>
          </div>
          <div class="custom-grid-column-6 statistic poundComponent">
-            <div class="value" id="pounds2021">
+            <div class="value" id="poundsCurrent2021">
                £ 0
             </div>
             <div class="label">
@@ -254,6 +371,12 @@
             </div>
          </div>
        </div>
+       -->
+       <div class="ui divider"></div>
+       <div class="stat-row">
+         <canvas id="comparisonChart"></canvas>
+       </div>
+       <div class="ui inverted labeled ticked range slider bottom aligned blue" id="dateRange"></div>
        <div class="ui divider"></div>
        <div class="section">
          <table class="ui large celled striped table inverted black unstackable" id="charitiesTable">
@@ -261,13 +384,13 @@
              <tr>
                <th rowspan="2" style="width: 365px;">Charities</th>
                <th colspan="3" style="width: 600px; min-width: 230px;" class="center aligned">Amount Raised</th>
-               <th colspan="2" style="width: 300px; min-width: 124px;" class="center aligned">Bundles</th>
+               <th colspan="2" style="width: 300px; min-width: 144px;" class="center aligned">Bundles</th>
              </tr>
              <tr>
                <th class="center aligned" style="width: 200px; min-width: 93px; border-left: 1px solid rgba(255,255,255,.1);">The Yogscast</th>
                <th class="center aligned" style="width: 200px; min-width: 93px;">Fundraisers</th>
                <th class="center aligned" style="width: 200px; min-width: 93px;">Total</th>
-               <th class="center aligned" style="width: 150px; min-width: 44px;">Sold</th>
+               <th class="center aligned" style="width: 150px; min-width: 64px;">Sold</th>
                <th class="center aligned" style="width: 150px; min-width: 80px;">Remaining</th>
              </tr>
            <tbody>
