--- a/website/index.html
+++ b/website/index.html
@@ -32,26 +32,26 @@
       </a>
       <h1 class="ui header inverted" id="headerName"> The Jingle Jam Live Dashboard </h1>
       <div class="ui buttons" id="headerButtonsLarge">
-        <button class="ui button purple" id="watchLive">
+        <button class="ui button purple button-watch-live">
           <i class="icon twitch"></i>Watch Live </button>
-        <button class="ui button green" id="donate">
+        <button class="ui button green button-donate">
           <i class="icon money"></i>Donate </button>
-        <button class="ui button blue" id="previousYears">
+        <button class="ui button blue button-previous-years">
           <i class="icon google"></i>Previous Years </button>
-        <button class="ui button pink" id="learnMore">
+        <button class="ui button pink button-learn-more">
           <i class="icon question circle"></i>Learn More </button>
       </div>
       <div class="ui icon buttons" id="headerButtonsSmall">
-        <button class="ui button purple" id="watchLive">
+        <button class="ui button purple button-watch-live">
           <i class="icon twitch"></i>
         </button>
-        <button class="ui button green" id="donate">
+        <button class="ui button green button-donate">
           <i class="icon money"></i>
         </button>
-        <button class="ui button blue" id="previousYears">
+        <button class="ui button blue button-previous-years">
           <i class="icon google"></i>
         </button>
-        <button class="ui button pink" id="learnMore">
+        <button class="ui button pink button-learn-more">
           <i class="icon question circle"></i>
         </button>
       </div>
