--- a/website/index.html
+++ b/website/index.html
@@ -73,55 +73,55 @@
       <div class="ui huge statistics inverted green" id="firstRow">
         <div class="statistic dollarComponent">
           <div class="value" id="raisedTotalDollars"> $ 0 </div>
-          <div class="label"> Current Amount Raised For 2022 </div>
+          <div class="label">Raised For 2022</div>
         </div>
         <div class="statistic poundComponent">
           <div class="value" id="raisedTotalPounds"> £ 0 </div>
-          <div class="label"> Current Amount Raised For 2022 </div>
+          <div class="label">Raised For 2022</div>
         </div>
       </div>
       <div class="ui statistics inverted custom-grid">
         <div class="statistic green dollarComponent custom-grid-column-3">
           <div class="value" id="raisedYogscastDollars"> $ 0 </div>
-          <div class="label"> Amount Raised By The Yogscast </div>
+          <div class="label">Raised By The Yogscast</div>
         </div>
         <div class="statistic green dollarComponent custom-grid-column-3">
           <div class="value" id="raisedFundraisersDollars"> $ 0 </div>
-          <div class="label"> Amount Raised From Fundraisers </div>
+          <div class="label">Raised From Fundraisers</div>
         </div>
         <div class="statistic green poundComponent custom-grid-column-3">
           <div class="value" id="raisedYogscastPounds"> £ 0 </div>
-          <div class="label"> Amount Raised By The Yogscast </div>
+          <div class="label">Raised By The Yogscast</div>
         </div>
         <div class="statistic green poundComponent custom-grid-column-3">
           <div class="value" id="raisedFundraisersPounds"> £ 0 </div>
-          <div class="label"> Amount Raised From Fundraisers </div>
+          <div class="label">Raised From Fundraisers</div>
         </div>
         <div class="statistic pink dollarComponent custom-grid-column-3">
           <div class="value" id="raisedEntireDollars"> $ 0 </div>
-          <div class="label"> Total Raised Since 2011 </div>
+          <div class="label">Raised Since 2011</div>
         </div>
         <div class="statistic pink poundComponent custom-grid-column-3">
           <div class="value" id="raisedEntirePounds"> £ 0 </div>
-          <div class="label"> Total Raised Since 2011 </div>
+          <div class="label">Raised Since 2011</div>
         </div>
       </div>
       <div class="ui statistics inverted custom-grid">
         <div class="statistic blue custom-grid-column-3">
           <div class="value" id="bundlesSold"> 0 </div>
-          <div class="label"> Bundles Sold </div>
+          <div class="label">Bundles Sold</div>
         </div>
         <div class="statistic blue custom-grid-column-3">
           <div class="value" id="donationCount"> 0 </div>
-          <div class="label"> Donations </div>
+          <div class="label">Donations</div>
         </div>
         <div class="statistic yellow dollarComponent custom-grid-column-3">
           <div class="value" id="averageDonationDollars"> $ 0.00 </div>
-          <div class="label"> Average Donation </div>
+          <div class="label">Average Donation</div>
         </div>
         <div class="statistic yellow poundComponent custom-grid-column-3">
           <div class="value" id="averageDonationPounds"> £ 0.00 </div>
-          <div class="label"> Average Donation </div>
+          <div class="label">Average Donation</div>
         </div>
       </div>
       <div id="liveUpdatingRow">
@@ -137,51 +137,51 @@
       <div class="ui tiny statistics inverted custom-grid" style="margin-top: 7px !important;">
         <div class="custom-grid-column-6 statistic dollarComponent">
           <div class="value color-2016" id="dollars2016"> $ 0 </div>
-          <div class="label"> 2016 Total </div>
+          <div class="label">Raised In 2016</div>
         </div>
         <div class="custom-grid-column-6 statistic dollarComponent">
           <div class="value color-2017" id="dollars2017"> $ 0 </div>
-          <div class="label"> 2017 Total </div>
+          <div class="label">Raised In 2017</div>
         </div>
         <div class="custom-grid-column-6 statistic dollarComponent">
           <div class="value color-2018" id="dollars2018"> $ 0 </div>
-          <div class="label"> 2018 Total </div>
+          <div class="label">Raised In 2018</div>
         </div>
         <div class="custom-grid-column-6 statistic dollarComponent">
           <div class="value color-2019" id="dollars2019"> $ 0 </div>
-          <div class="label"> 2019 Total </div>
+          <div class="label">Raised In 2019</div>
         </div>
         <div class="custom-grid-column-6 statistic dollarComponent">
           <div class="value color-2020" id="dollars2020"> $ 0 </div>
-          <div class="label"> 2020 Total </div>
+          <div class="label">Raised In 2020</div>
         </div>
         <div class="custom-grid-column-6 statistic dollarComponent">
           <div class="value color-2021" id="dollars2021"> $ 0 </div>
-          <div class="label"> 2021 Total </div>
+          <div class="label">Raised In 2021</div>
         </div>
         <div class="custom-grid-column-6 statistic poundComponent">
           <div class="value color-2016" id="pounds2016"> £ 0 </div>
-          <div class="label"> 2016 Total </div>
+          <div class="label">Raised In 2016</div>
         </div>
         <div class="custom-grid-column-6 statistic poundComponent">
           <div class="value color-2017" id="pounds2017"> £ 0 </div>
-          <div class="label"> 2017 Total </div>
+          <div class="label">Raised In 2017</div>
         </div>
         <div class="custom-grid-column-6 statistic poundComponent">
           <div class="value color-2018" id="pounds2018"> £ 0 </div>
-          <div class="label"> 2018 Total </div>
+          <div class="label">Raised In 2018</div>
         </div>
         <div class="custom-grid-column-6 statistic poundComponent">
           <div class="value color-2019" id="pounds2019"> £ 0 </div>
-          <div class="label"> 2019 Total </div>
+          <div class="label">Raised In 2019</div>
         </div>
         <div class="custom-grid-column-6 statistic poundComponent">
           <div class="value color-2020" id="pounds2020"> £ 0 </div>
-          <div class="label"> 2020 Total </div>
+          <div class="label">Raised In 2020</div>
         </div>
         <div class="custom-grid-column-6 statistic poundComponent">
           <div class="value color-2021" id="pounds2021"> £ 0 </div>
-          <div class="label"> 2021 Total </div>
+          <div class="label">Raised In 2021</div>
         </div>
       </div>
       <div class="ui divider"></div>
