--- a/website/home.html
+++ b/website/home.html
@@ -1,4 +1,9 @@
 <html>
+    <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+    </head>
     <body>
         <div id='myContainer'></div>
 
