--- a/website/home.html
+++ b/website/home.html
@@ -3,6 +3,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+        
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport" content="initial-scale=1">
     </head>
     <body>
         <div id='myContainer'></div>
