UI Improvements and syncronize updates with API

--- a/website/index.html
+++ b/website/index.html
@@ -67,16 +67,20 @@
           <div class="label">Average Donation</div>
         </div>
       </div>
-      <div id="liveUpdatingRow">
-        <label class="subtext-label" id="updatingRealTime">
-          <div class="ui active slow loader mini"></div>
-          <div class="loading-circle">
-            <i class="live-icon icon circle"></i>
-          </div> Updating Live
-        </label>
-        <label class="subtext-label" id="labelDate" style="float: right;"> Last Updated: N/A </label>
+      <div class="center-row">
+        <div class="diving-row">
+          <div id="liveUpdatingRow">
+            <label class="subtext-label" id="updatingRealTime">
+              <div class="ui active slow loader mini"></div>
+              <div class="loading-circle">
+                <i class="live-icon icon circle"></i>
+              </div> Updating Live
+            </label>
+            <label class="subtext-label" id="labelDate" style="float: right;"> Last Updated: N/A </label>
+          </div>
+          <hr size="1" class="divider">
+        </div>
       </div>
-      <hr size="1" class="divider">
       <div class="ui tiny statistics custom-grid" style="margin-top: 7px !important; margin-bottom: 20px !important;">
         <div class="custom-grid-column-6 statistic dollarComponent">
           <div class="value jj-pink" id="dollars2016"> $ 0 </div>
