--- a/website/index.html
+++ b/website/index.html
@@ -16,11 +16,11 @@
       <div class="ui large statistics" id="firstRow">
         <div class="statistic dollarComponent">
           <div class="value jj-pink" id="raisedTotalDollars"> $ 0 </div>
-          <div class="label">Raised For 2022</div>
+          <div class="label">Final Total For 2022</div>
         </div>
         <div class="statistic poundComponent">
           <div class="value jj-pink" id="raisedTotalPounds"> £ 0 </div>
-          <div class="label">Raised For 2022</div>
+          <div class="label">Final Total For 2022</div>
         </div>
       </div>
       <div class="ui small statistics custom-grid">
