Change Collections Sold to Collections Distributed

--- a/website/index.html
+++ b/website/index.html
@@ -52,7 +52,7 @@
       <div class="ui small statistics custom-grid">
         <div class="statistic custom-grid-column-3">
           <div class="value jj-pink" id="bundlesSold"> 0 </div>
-          <div class="label">Collections Sold</div>
+          <div class="label">Collections Distributed</div>
         </div>
         <div class="statistic custom-grid-column-3">
           <div class="value jj-pink" id="donationCount"> 0 </div>
